# BPETokenizer

./: .gitignore  CLAUDE.md  README.md  benchmark.py  pyproject.toml
.github/workflows/: ci.yml
bpetokenizer/: __init__.py  _constants.py  _heap_compat.py  _utils.py  pretokenize.py  tokenizer.py  train.py
bpetokenizer/algorithms/: __init__.py  heap.py  indexed.py  indexed_heap.py  inverted.py  inverted_heap.py  naive.py
scripts/: export_json.py  pretokenize_corpus.py
tests/: test_tokenizer.py
