[project]
name = "bpetokenizer"
version = "0.1.0"
description = "A from-scratch BPE tokenizer with four progressively optimised training algorithms"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["nlp", "tokenizer", "bpe", "byte-pair-encoding"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "regex>=2024.0.0",
    "tqdm>=4.67.3",
]

[project.optional-dependencies]
benchmark = ["matplotlib>=3.10.0"]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
]

[project.scripts]
pretokenize-corpus = "scripts.pretokenize_corpus:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bpetokenizer"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
